--- a/pages/மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்.md
+++ b/pages/மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்.md
@@ -3,6 +3,35 @@ title: மெய்ந்நிகர்வழி மகிழ்வூட்ட
 permalink: /tl-Gan-Eng-Seng-Primary-School-Synopsis
 description: ""
 ---
+<style>
+   .btntop {
+    position: fixed;
+    float: right;
+    bottom: 20px;
+    right: 80px;
+    z-index: 99;
+    boder: none;
+    background-color: #3bb9ff;
+    cursor: pointer;
+    padding: 15px;
+    boder-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
+  .backbtn{
+   margin-left: -100px;
+   border: none;
+  text-align: left;
+  width: 20%;
+  font-family:Lato,sans-serif;
+  } 
+@media only screen and (max-width: 600px) {
+.backbtn {
+   margin-left: 6px;
+  }
+}
+</style>
+<a href="/exhibits/tamil-exhibitions-d/schools/" style="float:left;" class="backbtn">Back</a><br>
 <h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;">மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்</h4>
 <p style="font-size: 20px;font-family: Anjal InaiMathi;">கான் எங் செங் தொடக்கப்பள்ளி, தகுந்த அறிவையும் திறன்களையும் மாணவர்களிடம் வளர்ப்பதன்வழிக் கற்றலைச் சுயமாக ஆராயக் கூடியவர்களாக அவர்களைத் திகழச் செய்ய முடியும் என்று நம்புகிறது.  </p>
 <p  style="font-size: 20px;font-family:Anjal InaiMathi;">ஆகவே, ஐந்தாம் வகுப்பு மாணவர்கள் கருத்துப்பரிமாற்றக் கற்றல் அனுபவத்தைப் பெற வேண்டும் என்பதற்காக விளையாட்டுமுறையில் கருத்துப்பரிமாறிக்கொள்ளும் நடவடிக்கை வாய்மொழிக்குரிய பயிற்சியில் இணைக்கப்பட்டுள்ளது. மாணவர் கற்றல் தளம், யூடியூப் ஆகிய தளங்களிலிருந்து தேர்ந்தெடுக்கப்பட்ட ஒளிக்காட்சிகள் வாய்மொழிக்குரிய தொகுப்பில் இணைக்கப்பட்டுள்ளன. இந்த மின்தொகுப்பு மாணவர்கள் தங்களது வளர்ச்சியைச் சுயமாக மீள்நோக்கம் செய்வதற்கும்  சுயமுனைப்புடன் கற்றலில் ஈடுபடுவதற்கும் வழிவகுத்துள்ளது. </p>
@@ -10,3 +39,4 @@ description: ""
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Joy of Spoken Interaction through Augmented Reality </h4>
 <p style="font-size: 20px;font-family:Lato,sans-serif;">Gan Eng Seng Primary school believes that empowering students with the necessary knowledge and skills will enable them to become explorers of their own learning. As such, the use of gamification in the oracy package has been implemented to enable Primary 5 students to dive into an interactive learning experience.  </p>
 <p style="font-size: 20px;font-family:Lato,sans-serif;">Selected video clips from SLS and YouTube were also incorporated into the oracy package as a means for students to engage in self-directed learning. This e-resource paved the way for developing students’ oracy and communication skills. Students experience the joy of learning in articulating their thoughts through games and oracy models. This approach enables students to not only understand the content well but also express their thoughts with confidence in Tamil. </p>
+<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
