--- a/pages/தொழில்நுட்பம்வழி தமிழ்மொழி.md
+++ b/pages/தொழில்நுட்பம்வழி தமிழ்மொழி.md
@@ -3,6 +3,35 @@ title: தொழில்நுட்பம்வழி தமிழ்மொழ
 permalink: /tl-UPTLC
 description: ""
 ---
+<style>
+   .btntop {
+    position: fixed;
+    float: right;
+    bottom: 20px;
+    right: 80px;
+    z-index: 99;
+    boder: none;
+    background-color: #3bb9ff;
+    cursor: pointer;
+    padding: 15px;
+    boder-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
+  .backbtn{
+   margin-left: -100px;
+   border: none;
+  text-align: left;
+  width: 20%;
+  font-family:Lato,sans-serif;
+  } 
+@media only screen and (max-width: 600px) {
+.backbtn {
+   margin-left: 6px;
+  }
+}
+</style>
+<a href="/exhibits/tamil-exhibitions-e/community-partners/" style="float:left;" class="backbtn">Back</a><br>
 <h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;">தொழில்நுட்பம்வழி தமிழ்மொழி</h4>
 <p style="font-size: 20px;font-family: Anjal InaiMathi;">தமிழ்மொழி கற்றல் மாணவர்களுக்கு மகிழ்வான, ஈடுபாடுமிக்க  அனுபவமாக இருக்க வேண்டும் என்பது உமறுப்புலவர் தமிழ்மொழி நிலையத்தின் அடிப்படை நோக்கங்களுள் ஒன்று. </p>
 <p style="font-size: 20px;font-family:Anjal InaiMathi;">அந்த வகையில் வளர்ந்துவரும் மெய்ந்நிகர்த் தொழில்நுட்பத்தின் (Virtual & Augmented Reality) வழியாகத் தமிழ்மொழி கற்றலையும், பண்பாட்டு நடவடிக்கைகளையும் உமறுப்புலவர் தமிழ்மொழி நிலையம் வடிவமைத்துள்ளது. </p>
@@ -12,3 +41,4 @@ description: ""
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Technology Enabled Tamil Language Learning</h4>
 <p style="font-size: 20px;font-family:Lato,sans-serif;">UPTLC leverages technologies like VR and AR to create language and cultural learning environments that integrate both virtual and physical realities to provide a joyful and engaging learning experience.</p>
 <p style="font-size: 20px;font-family:Lato,sans-serif;">At UPTLC, students are provided with opportunities to engage in cultural activities through an interactive Virtual 360° experience of the Herbal Garden and Heritage Centre. This empowers students to apply their learning real time and express their creativity. The use of such technological tools in UPTLC’s signature programmes, cultural-based traditional activities, and teaching and learning enables students to experience joyful discoveries in an authentic setting, whilst nurturing in them a disposition for life-long learning. </p>
+<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
