--- a/pages/நாவில் தமிழ் நாளும் தமிழ்.md
+++ b/pages/நாவில் தமிழ் நாளும் தமிழ்.md
@@ -3,6 +3,35 @@ title: நாவில் தமிழ் நாளும் தமிழ்
 permalink: /tl-TLLPC
 description: ""
 ---
+<style>
+   .btntop {
+    position: fixed;
+    float: right;
+    bottom: 20px;
+    right: 80px;
+    z-index: 99;
+    boder: none;
+    background-color: #3bb9ff;
+    cursor: pointer;
+    padding: 15px;
+    boder-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
+  .backbtn{
+   margin-left: -100px;
+   border: none;
+  text-align: left;
+  width: 20%;
+  font-family:Lato,sans-serif;
+  } 
+@media only screen and (max-width: 600px) {
+.backbtn {
+   margin-left: 6px;
+  }
+}
+</style>
+<a href="/exhibits/tamil-exhibitions-e/community-partners/" style="float:left;" class="backbtn">Back</a><br>
 <h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;">நாவில் தமிழ்; நாளும் தமிழ்</h4>
 <p style="font-size: 20px;font-family: Anjal InaiMathi;">தமிழ்மொழியைச் சிங்கப்பூரில் வாழும் மொழியாக நிலைபெறச் செய்யும் இலக்கோடு தமிழ்மொழி கற்றல் வளர்ச்சிக்குழு சமூக அமைப்புகளுடன் இணைந்து பல பயன்மிக்க நடவடிக்கைகளை முனைப்புடன் செயற்படுத்தி வருகிறது. இக்குழு முத்திரைத் திட்டங்கள், உடனிணைவுத் திட்டங்கள், நிதி ஆதரவு வழங்கும் திட்டங்கள் என மூவகையான திட்டங்களைச் செயற்படுத்துகிறது. </p>
 <p style="font-size: 20px;font-family: Anjal InaiMathi;">இத்திட்டங்கள் மாணவர்களின் மொழிப்பற்றை அதிகரிப்பதோடு தமிழ்ப் பண்பாட்டை அறிந்துகொள்ளவும் உதவுகின்றன. வகுப்பறைக்கு அப்பாலும் மாணவர்கள் மொழியைப் பயன்படுத்த இக்குழு பதினாறு ஆண்டுகளாக அரும்பாடுபட்டு வருகிறது. </p>
@@ -13,3 +42,4 @@ description: ""
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Speak in Tamil! Speak it Every day!</h4>
 <p style="font-size: 20px;font-family:Lato,sans-serif;">TLLPC  collaborates with key community partners in promoting and supporting efforts that sustains Tamil as a living language, and deepens students’ appreciation of Tamil language, heritage, and culture in Singapore. It organises programmes for Pre-schoolers to Junior College students. Programmes  such as “WOW Wild Learning Journey”, “Azhagae Tamizhae” and learning journeys allow students to discover the joy of Tamil language and culture beyond school. TLLPC also organises events such as the “Pre-School Tamil Language Teachers Seminar” to develop teachers’ competency and funds programmes that supports parents in supporting their children in Tamil Language acquisition.</p>
 <p style="font-size: 20px;font-family:Lato,sans-serif;">The TLLPC e-exhibit showcases apps and online games that enhance the learning of Pre-schoolers and Lower Primary students. Children are encouraged to try out the games and win attractive prizes!</p>
+<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
