--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -6,7 +6,7 @@ third_nav_title: 华文学习展示区
 ---
 <head>
 <style>
-	.btn1,.btn2{
+	.btn1,{
 	font-size: 18px;
     font-family: KaiTi;
     background-color: #d84178;;
@@ -16,6 +16,17 @@ third_nav_title: 华文学习展示区
     width: 60%;
   text-align: center;
 	display:block;
+	}
+	.btn2{
+	font-size: 18px;
+    font-family: KaiTi;
+    background-color: #d84178;;
+    padding: 3px 13px;
+    margin: 9px 13px;
+    border-radius: 6px;
+    width: 60%;
+  text-align: center;
+	display:none;
 	}
 	.btn-group {
 	margin-top:-15px;
