--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -6,7 +6,7 @@ third_nav_title: 华文学习展示区
 ---
 <head>
 <style>
-	.btn1,{
+	.btn1{
 	font-size: 18px;
     font-family: KaiTi;
     background-color: #d84178;;
@@ -14,7 +14,7 @@ third_nav_title: 华文学习展示区
     margin: 9px 13px;
     border-radius: 6px;
     width: 60%;
-  text-align: center;
+   text-align: center;
 	display:block;
 	}
 	.btn2{
