--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -49,13 +49,27 @@ text-decoration:none;
 </style>
 </head>
 <body>
+	<h4 style="font-family:Lato,sans-serif;">For Preschool/Primary Educators </h4>
+  <table style="border-collapse: collapse;
+  width: 100%;">
+  <tr>
+    <td style="border: none; width: 70%;
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Creating a Positive Chinese Learning Experience for Children from Pre-School to Primary School<br/>
+  Blended (Hybrid) Session from 11.30am to 12.30am<br/>
+Dr Zheng Yingjiang   <br/>
+    Master Teacher, AST, SCCL (Resident in Blangah Rise Primary School & MK)   </td>
+    <td style="border: none;
+  text-align: left;padding: 8px;width: 30%;">
+ <a href="/Ms-Wang-Zheng" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
+    </tr>
+</table>
 	<h4 style="font-family:Lato,sans-serif;">Sharing Sessions</h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Learn Chinese, But Not for The Sake of Learning Chinese<br/>
-  [Live Sharing Session from 4pm to 5pm ]<br/>
+  [Live Sharing Session from 4.00pm to 5.00pm ]<br/>
 Ms Wang Zheng  <br/>
 		Mediacorp News Anchor </td>
     <td style="border: none;
