--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -32,6 +32,20 @@ text-decoration:none;
 </style>
 </head>
 <body>
+	<h4 style="font-family:Lato,sans-serif;">For Preschool/Primary Educators </h4>
+  <table style="border-collapse: collapse;
+  width: 100%;">
+  <tr>
+    <td style="border: none; width: 70%;
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Tamil Language Learning Through Positive Education and Appreciative Inquiry<br/>
+  Blended (Hybrid) Session from 11.30am to 12.30am<br/>
+Mdm Kunawathyammal D/O Kaliannan <br/>
+    Senior Teaching Fellow, NIE</td>
+    <td style="border: none;
+  text-align: left;padding: 8px;width: 30%;">
+ <a href="/Ms-Wang-Zheng" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
+    </tr>
+</table>
 <h4 style="font-family:Lato,sans-serif;">Sharing Sessions</h4>
 <table style="border-collapse: collapse;
   width: 100%;">
