--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -49,7 +49,7 @@ text-decoration:none;
 </style>
 </head>
 <body>
-	<h4 style="font-family:Lato,sans-serif;">For Preschool/Primary Educators </h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>For Preschool/Primary Educators </b></h4>
   <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -63,7 +63,7 @@ Dr Zheng Yingjiang   <br/>
  <a href="/Dr-Zheng-Yingjiang" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
     </tr>
 </table>
-	<h4 style="font-family:Lato,sans-serif;">Sharing Sessions</h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Sharing Sessions</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -77,7 +77,7 @@ Ms Wang Zheng  <br/>
  <a href="/Ms-Wang-Zheng" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
     </tr>
 </table>
-<h4 style="font-family:Lato,sans-serif;">Storytelling sessions</h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Storytelling sessions</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -92,7 +92,7 @@ National Library Board </td>
 </td>
     </tr>
 </table>
-<h4 style="font-family:Lato,sans-serif;">Interactive Workshops</h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Interactive Workshops</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -108,7 +108,7 @@ Mandai Wildlife Group </td>
  </td>
     </tr>
 </table>
-<h4 style="font-family:Lato,sans-serif;">Engagement Sessions</h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Engagement Sessions</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -124,7 +124,7 @@ Princess Elizabeth Primary School, recipient of Distinguished Chinese language t
 </td>
     </tr>
 </table>
-	<h4 style="font-family:Lato,sans-serif;">Pre-Recorded Sessions</h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Pre-Recorded Sessions</b></h4>
 <table style="border-collapse: collapse;  width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
