Update file: தமிழ் ஒளிக்காட்சிகள்.md

--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -32,7 +32,7 @@ text-decoration:none;
 </style>
 </head>
 <body>
-	<h4 style="font-family:Lato,sans-serif;">For Preschool/Primary Educators </h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>For Preschool/Primary Educators </b></h4>
   <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -46,7 +46,7 @@ Mdm Kunawathyammal D/O Kaliannan <br/>
  <a href="/Mrs-Kunawathy-Nallathambi" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
     </tr>
 </table>
-<h4 style="font-family:Lato,sans-serif;">Sharing Sessions</h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Sharing Sessions</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -62,7 +62,7 @@ Mr Jaya Ganesh Isuran<br/>
 </td>
     </tr>
 </table>
-<h4 style="font-family:Lato,sans-serif;">Storytelling Sessions</h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Storytelling Sessions</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -78,7 +78,7 @@ National Library Board  </td>
 </td>
     </tr>
 </table>
-<h4 style="font-family:Lato,sans-serif;">Interactive Workshops<</h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Interactive Workshops</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -93,7 +93,7 @@ Ms Yogeswari Preshant <br/>
 </td>
     </tr>
 </table>
-<h4 style="font-family:Lato,sans-serif;">Engagement Sessions</h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Engagement Sessions</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -109,7 +109,7 @@ Ms Sajini Naidu <br/>
  </td>
     </tr>
 </table>
-<h4 style="font-family:Lato,sans-serif;">Pre-Recorded Sessions</h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Pre-Recorded Sessions</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
