--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -54,8 +54,8 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">从学前到小学，为孩童打造积极的华文学习体验<br/>
-  <span style="font-family:Lato,sans-serif">Blended (Hybrid) Session from 11.30am to 12.30am<br/>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:24px;">从学前到小学，为孩童打造积极的华文学习体验<br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Blended (Hybrid) Session from 11.30am to 12.30am]<br/>
 Dr Zheng Yingjiang   <br/>
 		Master Teacher, AST, SCCL (Resident in Blangah Rise Primary School & MK)   </span></td>
     <td style="border: none;
