--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -54,7 +54,7 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:24px;">从学前到小学，为孩童打造积极的华文学习体验<br/>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">从学前到小学，为孩童打造积极的华文学习体验<br/>
   <span style="font-family:Lato,sans-serif; font-size:18px">[Blended (Hybrid) Session from 11.30am to 12.30am]<br/>
 Dr Zheng Yingjiang   <br/>
 		Master Teacher, AST, SCCL (Resident in Blangah Rise Primary School & MK)   </span></td>
@@ -68,10 +68,10 @@ Dr Zheng Yingjiang   <br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Learn Chinese, But Not for The Sake of Learning Chinese<br/>
-  [Live Sharing Session from 4.00pm to 5.00pm ]<br/>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">学华语：不要为学而学<br/>
+ <span style="font-family:Lato,sans-serif; font-size:18px"> [Live Sharing Session from 4.00pm to 5.00pm ] <br/>
 Ms Wang Zheng  <br/>
-		Mediacorp News Anchor </td>
+	 Mediacorp News Anchor </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Wang-Zheng" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
