--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -82,10 +82,11 @@ Ms Wang Zheng  <br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Lato,sans-serif;font-size:18px;"> Stories from the Reading Garden<br/>[Storytelling session (For K1 – P2 students)  from 1.00pm to 2.00pm ]<br/>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Kaiti;font-size:22px;"> 悦读花园的小故事<br/>
+			<span style="font-family:Lato,sans-serif; font-size:18px">[Storytelling session (For K1 – P2 students) from 1.00pm to 2.00pm]<br/>
   Ms Melissa Choo See Check<br/>
 		Associate Librarian, Collection Planning & Development, Chinese Language
-National Library Board </td>
+			National Library Board </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Melissa-Choo-See-Check" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -97,11 +98,11 @@ National Library Board </td>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Enter the Wonderful World of Animals<br/>
-  [ Virtual Workshop (For Parent-Child)  from 2.30pm to 3.30pm ]<br/>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">走进奇妙的动物世界<br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Virtual Workshop (For Parent-Child) from 2.30pm to 3.30pm]<br/>
  Ms Ong Peiying  <br/>
 		Senior Manager (Education)
-Mandai Wildlife Group </td>
+		Mandai Wildlife Group </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Ong-Peiying" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -113,11 +114,11 @@ Mandai Wildlife Group </td>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Online Interactive Activities at Mid-Autumn Festival Celebration<br/>
-  [Engagement Session from 5.30pm to 6.30pm ]<br/>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">庆中秋线上互动活动<br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Engagement Session from 5.30pm to 6.30pm ]<br/>
 Mdm Jiang Yanyan  <br/>
 		Senior Teacher, Chinese Language 
-Princess Elizabeth Primary School, recipient of Distinguished Chinese language teacher award 2021 </td>
+Princess Elizabeth Primary School, recipient of Distinguished Chinese Language Teacher Award 2021 </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Mdm-Jiang-Yanyan" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -128,10 +129,10 @@ Princess Elizabeth Primary School, recipient of Distinguished Chinese language t
 <table style="border-collapse: collapse;  width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Cultivating interest in Chinese Language among children through storytelling<br/>
-  [ Pre-Recorded Sessions (Recordings will be made available online from 27 Aug 22)  <br/>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">贴士和策略：通过讲故事激发孩子对华文的兴趣<br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22) <br/>
 Ms Siau Jiahui <br/>
-		Mediacorp YES 933 DJ </td>
+		Mediacorp YES 933 DJ </span> </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Siau-Jiahui" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -143,8 +144,8 @@ Ms Siau Jiahui <br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Home, where the learning of Chinese begins!<br/>
-  [ Pre-Recorded Sessions (Recordings will be made available online from 27 Aug 22)  <br/>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Kaiti;font-size:22px;">家，学习华文的摇篮！<br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22)  <br/>
    <br/>
 Mdm Cheah Sin Wei  <br/>
 		Stay-home Mother<br/>
@@ -153,7 +154,7 @@ Mdm Cheah Sin Wei  <br/>
 		Student <br/>
          <br/>
        Ms Renee Tan (Facilitator) <br/>
-		Founder & Managing Director of HashTaqs Pte Ltd, Founder of H.E.R. Entrepreneur<br/>
+		Founder & Managing Director of HashTaqs Pte Ltd, Founder of H.E.R. Entrepreneur</span><br/>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">	
@@ -166,10 +167,10 @@ Mdm Cheah Sin Wei  <br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Use of mobile applications in the teaching and learning of Chinese Language for preschoolers.<br/>
-  [ Pre-School Educators <br/>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Kaiti;font-size:22px;">利用移动网络工具辅助学前华文教学<br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22)<br/>
 Mdm Corinne Madelyn Fan Wai Foong  <br/>
-		Lecturer, NIEC-NP   </td>
+		Lecturer, NIEC-NP   </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Mdm-Corinne-Madelyn" class="btn1" style="color:#fff;">Watch Here!</a>
@@ -181,10 +182,10 @@ Mdm Corinne Madelyn Fan Wai Foong  <br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Encouraging Cognitive Development through Reading<br/>
-  [  Primary Educators     <br/>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">阅读促进认知发展<br/>
+ <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22)<br/>
 Professor Wu Nian Ying   <br/>
-		Professor, Shanghai Normal University, School of Education  </td>
+	 Professor, Shanghai Normal University, School of Education  </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Professor-Wu-Nian-Ying" class="btn1" style="color:#fff;">Watch Here!</a>
