--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -37,10 +37,10 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Tamil Language Learning Through Positive Education and Appreciative Inquiry<br/>
-  Blended (Hybrid) Session from 11.30am to 12.30am<br/>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:18px;">உடன்பாடான கல்வியோடு பாராட்டத்தக்க வினவல் அணுகுமுறையின் வாயிலாகத் தமிழ்மொழிக் கற்றல்<br/>
+ <span style="font-family: Lato,Sans-Serif; font-size: 18px"> [Blended (Hybrid) Session from 11.30am to 12.30am]<br/>
 Mdm Kunawathyammal D/O Kaliannan <br/>
-    Senior Teaching Fellow, NIE</td>
+    Senior Teaching Fellow, NIE<span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Mrs-Kunawathy-Nallathambi" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
@@ -51,10 +51,10 @@ Mdm Kunawathyammal D/O Kaliannan <br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Let’s Speak in Tamil with Our Children!<br/>
-  [ Live Sharing Session from 4pm to 5pm ]<br/>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:18px;">தமிழில் பேசுவோம்! தங்கச்செல்வங்களை வளர்ப்போம்! <br/>
+  <span style="font-family: Lato,Sans-Serif; font-size: 18px;">[Live Sharing Session from 4pm to 5pm]<br/>
 Mr Jaya Ganesh Isuran<br/>
-		Actor, Host, Entrepreneur <br/>
+		Actor, Host, Entrepreneur </span> <br/>
         </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
