Update file: தமிழ் ஒளிக்காட்சிகள்.md

--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -38,9 +38,9 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:18px;">உடன்பாடான கல்வியோடு பாராட்டத்தக்க வினவல் அணுகுமுறையின் வாயிலாகத் தமிழ்மொழிக் கற்றல்<br/>
- <span style="font-family: Lato,Sans-Serif; font-size: 18px"> [Blended (Hybrid) Session from 11.30am to 12.30am]<br/>
+ <span style="font-family: Lato,Sans-Serif; font-size: 18px"> [Blended (Hybrid) Session from 11.30am to 12.30am]<br/><br/>
 Mdm Kunawathyammal D/O Kaliannan <br/>
-    Senior Teaching Fellow, NIE<span></td>
+    Senior Teaching Fellow, NIE</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Mrs-Kunawathy-Nallathambi" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
@@ -52,7 +52,7 @@ Mdm Kunawathyammal D/O Kaliannan <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:18px;">தமிழில் பேசுவோம்! தங்கச்செல்வங்களை வளர்ப்போம்! <br/>
-  <span style="font-family: Lato,Sans-Serif; font-size: 18px;">[Live Sharing Session from 4pm to 5pm]<br/>
+  <span style="font-family: Lato,Sans-Serif; font-size: 18px;">[Live Sharing Session from 4pm to 5pm]<br/><br/>
 Mr Jaya Ganesh Isuran<br/>
 		Actor, Host, Entrepreneur </span> <br/>
         </td>
