--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -55,7 +55,7 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">从学前到小学，为孩童打造积极的华文学习体验<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">[Blended (Hybrid) Session from 11.30am to 12.30am]<br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Blended (Hybrid) Session from 11.30am to 12.30am]<br/><br/>
 Dr Zheng Yingjiang   <br/>
 		Master Teacher, AST, SCCL (Resident in Blangah Rise Primary School & MK)   </span></td>
     <td style="border: none;
@@ -69,7 +69,7 @@ Dr Zheng Yingjiang   <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">学华语：不要为学而学<br/>
- <span style="font-family:Lato,sans-serif; font-size:18px"> [Live Sharing Session from 4.00pm to 5.00pm ] <br/>
+ <span style="font-family:Lato,sans-serif; font-size:18px"> [Live Sharing Session from 4.00pm to 5.00pm ] <br/><br/>
 Ms Wang Zheng  <br/>
 	 Mediacorp News Anchor </span></td>
     <td style="border: none;
@@ -83,7 +83,7 @@ Ms Wang Zheng  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Kaiti;font-size:22px;"> 悦读花园的小故事<br/>
-			<span style="font-family:Lato,sans-serif; font-size:18px">[Storytelling session (For K1 – P2 students) from 1.00pm to 2.00pm]<br/>
+			<span style="font-family:Lato,sans-serif; font-size:18px">[Storytelling session (For K1 – P2 students) from 1.00pm to 2.00pm]<br/><br/>
   Ms Melissa Choo See Check<br/>
 		Associate Librarian, Collection Planning & Development, Chinese Language
 			National Library Board </span></td>
@@ -99,7 +99,7 @@ Ms Wang Zheng  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">走进奇妙的动物世界<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">[Virtual Workshop (For Parent-Child) from 2.30pm to 3.30pm]<br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Virtual Workshop (For Parent-Child) from 2.30pm to 3.30pm]<br/><br/>
  Ms Ong Peiying  <br/>
 		Senior Manager (Education)
 		Mandai Wildlife Group </span></td>
@@ -115,7 +115,7 @@ Ms Wang Zheng  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">庆中秋线上互动活动<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">[Engagement Session from 5.30pm to 6.30pm ]<br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Engagement Session from 5.30pm to 6.30pm ]<br/><br/>
 Mdm Jiang Yanyan  <br/>
 		Senior Teacher, Chinese Language 
 Princess Elizabeth Primary School, recipient of Distinguished Chinese Language Teacher Award 2021 </span></td>
@@ -130,7 +130,7 @@ Princess Elizabeth Primary School, recipient of Distinguished Chinese Language T
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">贴士和策略：通过讲故事激发孩子对华文的兴趣<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22) <br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22) <br/><br/>
 Ms Siau Jiahui <br/>
 		Mediacorp YES 933 DJ </span> </td>
     <td style="border: none;
@@ -168,7 +168,7 @@ Mdm Cheah Sin Wei  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Kaiti;font-size:22px;">利用移动网络工具辅助学前华文教学<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22)<br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22)<br/><br/>
 Mdm Corinne Madelyn Fan Wai Foong  <br/>
 		Lecturer, NIEC-NP   </span></td>
     <td style="border: none;
@@ -183,7 +183,7 @@ Mdm Corinne Madelyn Fan Wai Foong  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">阅读促进认知发展<br/>
- <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22)<br/>
+ <span style="font-family:Lato,sans-serif; font-size:18px">(Available online from 27 Aug 22)<br/><br/>
 Professor Wu Nian Ying   <br/>
 	 Professor, Shanghai Normal University, School of Education  </span></td>
     <td style="border: none;
