Update file: தமிழ் ஒளிக்காட்சிகள்.md

--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -67,11 +67,11 @@ Mr Jaya Ganesh Isuran<br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff">Storytime<br/>
-  [Storytelling session (For K1 – P2 students)from 1.00pm to 2.00pm ]<br/>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">கதை நேரம்<br/>
+  <span style="font-family: Lato,Sans-Serif; font-size: 18px;">[Storytelling session (For K1 – P2 students)from 1.00pm to 2.00pm]<br/><br/>
    Ms Zainab <br/>
 		Associate Librarian, Tamil Language
-National Library Board  </td>
+		National Library Board  </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Zainab" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -83,10 +83,10 @@ National Library Board  </td>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Engaging Pre-School Children Effectively in Tamil<br/>
-  [ Virtual Workshop (For Parent-Child) from 2.30pm to 3.30pm ]<br/>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">பாலர் பள்ளிப் பிள்ளைகளைப் பயன்முனைப்புமிக்க வகையில் தமிழ்மொழியில் ஈடுபடச் செய்தல்.<br/>
+ <span style="font-family: Lato,Sans-Serif; font-size: 18px;"> [Virtual Workshop (For Parent-Child) from 2.30pm to 3.30pm]<br/><br/>
 Ms Yogeswari Preshant <br/>
-		Founder, Think Tamil Academy Artistic Director, ThinkTheatre </td>
+	 Founder, Think Tamil Academy Artistic Director, ThinkTheatre </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Yogeswari-Preshant" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -98,11 +98,11 @@ Ms Yogeswari Preshant <br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Tamil is fun and joyful! <br/>
-  [ Engagement Session from 5.30pm to 6.30pm ]<br/>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">தித்திக்கும் தமிழ் <br/>
+ <span style="font-family: Lato,Sans-Serif; font-size: 18px;"> [Engagement Session from 5.30pm to 6.30pm]<br/><br/>
 Ms Sajini Naidu <br/>
 		Television Personality, Actress, Anchor
-</td>
+			</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Sajini-Naidu" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -114,11 +114,11 @@ Ms Sajini Naidu <br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Early Childhood Bilingualism: Securing the future of MTL<br/>
-  [Pre-Recorded Sessions (Recordings will be made available online from 27 Aug 22) <br/>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">இருமொழிக் கல்வி: தமிழ்மொழியின் எதிர்காலத்தைப் பேணிக்காத்தல்<br/>
+<span style="font-family: Lato,Sans-Serif; font-size: 18px;"> (Available online from 27 Aug 22) <br/><br/>
 Mr Sundar Plavenderraj<br/>
 		Tamil Language Council Member
-     </td>
+			</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Mr-Sundar-Plavenderraj" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -130,11 +130,11 @@ Mr Sundar Plavenderraj<br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Creating Enjoyable Moments with your kids through Storytelling! <br/>
-  [Pre-Recorded Sessions (Recordings will be made available online from 27 Aug 22) <br/>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">கதை சொல்வதன்மூலம் உங்கள் பிள்ளைகளோடு மகிழ்வூட்டும் தருணங்களை உருவாக்குங்கள்!  <br/>
+ <span style="font-family: Lato,Sans-Serif; font-size: 18px;"> (Available online from 27 Aug 22)<br/><br/>
 Ms Rani Kanna <br/>
 		Professional Storyteller & Founder Director of AKT Creations
-     </td>
+			</span>  </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Rani-Kanna" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -146,10 +146,10 @@ Ms Rani Kanna <br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Strategies to engage pre-schoolers in learning Tamil in a fun manner.  <br/>
-  [ Pre-School Educators ] <br/>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">Sபாலர் பள்ளி மாணவர்களை மகிழ்வூட்டும் தமிழ்மொழி கற்றலில் ஈடுபடுத்த ஆசிரியர்களும் பெற்றோர்களும் மேற்கொள்ளக்கூடிய சில உத்திமுறைகள் <br/>
+ <span style="font-family: Lato,Sans-Serif; font-size: 18px;"> (Available online from 27 Aug 22) <br/><br/>
 Dr Sukuna S. Vijayadevar, PhD <br/>
-	Lead Curriculum Specialist, NIEC HQ </td>
+	 Lead Curriculum Specialist, NIEC HQ </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Dr-Sukuna-S-Vijayadevar" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -160,8 +160,11 @@ Dr Sukuna S. Vijayadevar, PhD <br/>
 <table style="border-collapse: collapse;width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Lato,sans-serif;font-size:18px;">Play. Learn. Grow<br/>
-  [  Primary Educators ]   <br/>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">விளையாடு; கற்றுக்கொள்; முன்னேறு!
+<br/>
+விளையாட்டுவழிக் கற்றல் கற்பித்தல்
+<br/>
+ <span style="font-family: Lato,Sans-Serif; font-size: 18px;"> (Available online from 27 Aug 22) <br/> <br/>
   <br/>
 Mdm Sumathi Krishnasamy <br/>
 		Senior Teacher, Tamil Language 
@@ -169,7 +172,7 @@ Horizon Primary School <br/>
         <br/>
       Mdm Thasneem Parveen D/O Sirazudeen<br/>
 		Tamil Language Teacher 
-Horizon Primary School </td>
+	 Horizon Primary School </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Mdm-Sumathi-Krishnasamy-And-Mdm-Thasneem-Parveen" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
