Update file: தமிழ் ஒளிக்காட்சிகள்.md

--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -164,7 +164,7 @@ Dr Sukuna S. Vijayadevar, PhD <br/>
 <br/>
 விளையாட்டுவழிக் கற்றல் கற்பித்தல்
 <br/>
- <span style="font-family: Lato,Sans-Serif; font-size: 18px;"> (Available online from 27 Aug 22) <br/> <br/>
+ <span style="font-family: Lato,Sans-Serif; font-size: 18px;"> (Available online from 27 Aug 22) <br/>
   <br/>
 Mdm Sumathi Krishnasamy <br/>
 		Senior Teacher, Tamil Language 
