--- a/pages/நான் என் பண்பாட்டின் பிரதிநிதி.md
+++ b/pages/நான் என் பண்பாட்டின் பிரதிநிதி.md
@@ -33,13 +33,13 @@ description: ""
 </style>
 <a href="/exhibits/tamil-exhibitions-c/preschool/" style="float:left;" class="backbtn">Back</a><br>
 <h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;">நான் என் பண்பாட்டின் பிரதிநிதி</h4>
-<p style="font-size: 20px;font-family: Anjal InaiMathi;">‘நான் என் பண்பாட்டின் பிரதிநிதி’ என்னும் நடவடிக்கையைக் கல்வி அமைச்சின் பாலர் பள்ளி (வெலிங்டன்) நடத்துகிறது. </p>
-<p  style="font-size: 20px;font-family:Anjal InaiMathi;">பிள்ளைகள் ஆர்வத்துடன் தாய்மொழியைக் கற்க ஊக்குவிப்பதோடு பண்பாடு, பாரம்பரியம், பன்முகத்தன்மை முதலிவற்றைப் பற்றிய விழிப்புணர்வையும் மதிப்பையும் அவர்களிடத்தில் ஏற்படுத்துவதும் மகிழ்வூட்டும் கற்றலுக்கு வழிவகுப்பதும் இந்த நடவடிக்கையின் நோக்கங்களாகும்.</p>
-<p  style="font-size: 20px;font-family:Anjal InaiMathi;">நடைமுறைசார்ந்த, அர்த்தமுள்ள, மகிழ்வூட்டும் நடவடிக்கைகளின் பலவற்றின் வாயிலாகப் பிள்ளைகளுக்கு உள்ளூர்ப் பண்பாட்டையும் பாரம்பரியத்தையும் பற்றிய தலைப்புகளையொட்டிப் பிள்ளைகள் ஆய்ந்தறிகிறார்கள். இதனால், அவர்களுக்கு தங்களது அடையாளத்தையும் பண்பாட்டையும் பற்றிய விழிப்புணர்வும் புரிந்துணர்வும் ஏற்படுகிறது.</p>
-<p  style="font-size: 20px;font-family:Anjal InaiMathi;">இந்த நடவடிக்கையின் ஒரு பகுதியாகப் பிள்ளைகளது குடும்பத்தினரும் நடவடிக்கையில் இணைந்துகொள்கிறார்கள். குடும்பத்தினருடன் இணைந்து நடவடிக்கைகளில் ஈடுபடுவதால் பிள்ளைகளுக்கு மொழியின்பால் அன்பையும் பண்பாட்டின்மீது மதிப்பையும் ஏற்படுத்திக்கொள்ள இது நல்வாய்ப்பாக அமைகிறது.</p>
+<p style="font-size: 20px;font-family: Anjal InaiMathi;text-align:justify;">‘நான் என் பண்பாட்டின் பிரதிநிதி’ என்னும் நடவடிக்கையைக் கல்வி அமைச்சின் பாலர் பள்ளி (வெலிங்டன்) நடத்துகிறது. </p>
+<p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">பிள்ளைகள் ஆர்வத்துடன் தாய்மொழியைக் கற்க ஊக்குவிப்பதோடு பண்பாடு, பாரம்பரியம், பன்முகத்தன்மை முதலிவற்றைப் பற்றிய விழிப்புணர்வையும் மதிப்பையும் அவர்களிடத்தில் ஏற்படுத்துவதும் மகிழ்வூட்டும் கற்றலுக்கு வழிவகுப்பதும் இந்த நடவடிக்கையின் நோக்கங்களாகும்.</p>
+<p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">நடைமுறைசார்ந்த, அர்த்தமுள்ள, மகிழ்வூட்டும் நடவடிக்கைகளின் பலவற்றின் வாயிலாகப் பிள்ளைகளுக்கு உள்ளூர்ப் பண்பாட்டையும் பாரம்பரியத்தையும் பற்றிய தலைப்புகளையொட்டிப் பிள்ளைகள் ஆய்ந்தறிகிறார்கள். இதனால், அவர்களுக்கு தங்களது அடையாளத்தையும் பண்பாட்டையும் பற்றிய விழிப்புணர்வும் புரிந்துணர்வும் ஏற்படுகிறது.</p>
+<p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">இந்த நடவடிக்கையின் ஒரு பகுதியாகப் பிள்ளைகளது குடும்பத்தினரும் நடவடிக்கையில் இணைந்துகொள்கிறார்கள். குடும்பத்தினருடன் இணைந்து நடவடிக்கைகளில் ஈடுபடுவதால் பிள்ளைகளுக்கு மொழியின்பால் அன்பையும் பண்பாட்டின்மீது மதிப்பையும் ஏற்படுத்திக்கொள்ள இது நல்வாய்ப்பாக அமைகிறது.</p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;"> ‘I am a Cultural Ambassador!’
 Nurturing the Joy of Learning Mother Tongue Languages and Culture</h4>
-<p  style="font-size: 20px;font-family:Lato,sans-serif;">I am a Cultural Ambassador!’ is a Mother Tongue Language (MTL) programme at MOE Kindergarten @ Wellington. </p>
-<p  style="font-size: 20px;font-family:Lato,sans-serif;">The programme aims to nurture a joy of learning MTL and develop children’s awareness and appreciation of both their own cultural heritage and the diverse cultures of Singapore. Through authentic, fun and meaningful activities, children explore topics related to local cultures that develop their cultural identity and understanding of their own and other cultures.</p>
-<p  style="font-size: 20px;font-family:Lato,sans-serif;">As part of the programme, family involvement, through family-based activities, is encouraged to further inculcate in children a love for MTL and  their own cultural heritage.</p>
+<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">I am a Cultural Ambassador!’ is a Mother Tongue Language (MTL) programme at MOE Kindergarten @ Wellington. </p>
+<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The programme aims to nurture a joy of learning MTL and develop children’s awareness and appreciation of both their own cultural heritage and the diverse cultures of Singapore. Through authentic, fun and meaningful activities, children explore topics related to local cultures that develop their cultural identity and understanding of their own and other cultures.</p>
+<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">As part of the programme, family involvement, through family-based activities, is encouraged to further inculcate in children a love for MTL and  their own cultural heritage.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
