Update file: மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்.md

--- a/pages/மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்.md
+++ b/pages/மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்.md
@@ -32,7 +32,7 @@ description: ""
 }
 </style>
 <a href="/exhibits/tamil-exhibitions-d/schools/" style="float:left;" class="backbtn">Back</a><br>
-<h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;text-align:justify;">மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்</h4>
+<h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;">மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்</h4>
 <p style="font-size: 20px;font-family: Anjal InaiMathi;text-align:justify;">கான் எங் செங் தொடக்கப்பள்ளி, தகுந்த அறிவையும் திறன்களையும் மாணவர்களிடம் வளர்ப்பதன்வழிக் கற்றலைச் சுயமாக ஆராயக் கூடியவர்களாக அவர்களைத் திகழச் செய்ய முடியும் என்று நம்புகிறது.  </p>
 <p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">ஆகவே, ஐந்தாம் வகுப்பு மாணவர்கள் கருத்துப்பரிமாற்றக் கற்றல் அனுபவத்தைப் பெற வேண்டும் என்பதற்காக விளையாட்டுமுறையில் கருத்துப்பரிமாறிக்கொள்ளும் நடவடிக்கை வாய்மொழிக்குரிய பயிற்சியில் இணைக்கப்பட்டுள்ளது. மாணவர் கற்றல் தளம், யூடியூப் ஆகிய தளங்களிலிருந்து தேர்ந்தெடுக்கப்பட்ட ஒளிக்காட்சிகள் வாய்மொழிக்குரிய தொகுப்பில் இணைக்கப்பட்டுள்ளன. இந்த மின்தொகுப்பு மாணவர்கள் தங்களது வளர்ச்சியைச் சுயமாக மீள்நோக்கம் செய்வதற்கும்  சுயமுனைப்புடன் கற்றலில் ஈடுபடுவதற்கும் வழிவகுத்துள்ளது. </p>
 <p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">பாஇம்மின்தொகுப்பு மாணவர்கள் தங்களது பேச்சுத்திறனையும் இருவழிக் கருத்துப்பரிமாற்றத் திறன்களையும் மேம்படுத்திக்கொள்ளவும் உதவியுள்ளது. மேலும், இந்த மின்தொகுப்பில் இடம்பெற்றுள்ள பற்பல ஒளிக்காட்சிகள், மாதிரி வாய்மொழிப் பயிற்சிகள், மாணவர்களின் மாதிரிப் படைப்புகள், விளையாட்டுகள் முதலியவை மகிழ்வூட்டும் கற்றலுக்கு வழிவகுத்துள்ளன. இந்த உத்தியானது  மாணவர்கள் கருப்பொருளையொட்டி ஆழ்ந்து சிந்தித்துக் கருத்துகளைத் தன்னம்பிக்கையோடு எடுத்துரைக்க அவர்களுக்குத் துணைபுரிந்துள்ளது.  </p>
