Update file: இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்.md

--- a/pages/இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்.md
+++ b/pages/இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்.md
@@ -32,7 +32,7 @@ description: ""
 }
 </style>
 <a href="/exhibits/tamil-exhibitions-c/preschool/" style="float:left;" class="backbtn">Back</a><br>
-<h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;text-align:justify;">இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்</h4>
+<h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;">இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்</h4>
 <p style="font-size: 20px;font-family: Anjal InaiMathi;text-align:justify;">கல்வி அமைச்சின் பாலர் பள்ளிப் பாடக்கலைத்திட்டம்,  பிள்ளைகள் அன்றாடக் கலந்துரையாடல்களின்வழி இயல்பாக ஆங்கிலத்திலும் தமிழிலும் கேட்பதற்கும் பேசுவதற்குமான வாய்ப்பைக் வழங்குகிறது.   </p>
 <p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">கல்வி அமைச்சின் பாலர் பள்ளி (ஹொரைஸன்)-இல் விண்மீன்கள் பாடக்கலைத்திட்டம் (தாய்மொழி), கற்றல் நிலையங்களிலும் அன்றாடக் கலந்துரையாடல்களின்போதும் பிள்ளைகள் தாய்மொழியில் கலந்துரையாட அதிக வாய்ப்புகளை வழங்குகிறது.</p>
 <p  style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">இதன்வழிப் பிள்ளைகள் ஒருவருடன் ஒருவர் அர்த்தமுள்ள சூழலில் தாய்மொழியைப் பேசுகின்றனர். மேலும், இனஞ்சார்ந்த உள்ளூர்ப் பண்பாட்டைப் பற்றியும் அறிந்துகொள்கின்றனர். ஒவ்வொரு வாரமும் அர்த்தமுள்ள விளையாட்டின்வழியே சீனம், மலாய் இந்திய பண்பாட்டைப்பற்றிக்  கற்றல் நிலைய நடவடிக்கையின் வாயிலாக அறிந்துகொள்ள நேரம் ஒதுக்கப்பட்டுள்ளது.</p>
