--- a/pages/எஸ்பிளனேட் கடலோரக் கலை அரங்கம்.md
+++ b/pages/எஸ்பிளனேட் கடலோரக் கலை அரங்கம்.md
@@ -33,11 +33,11 @@ description: ""
 </style>
 <a href="/exhibits/tamil-exhibitions-e/community-partners/" style="float:left;" class="backbtn">Back</a><br>
 <h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;">எஸ்பிளனேட் - கடலோரக் கலை அரங்கம்</h4>
-<p style="font-size: 20px;font-family: Anjal InaiMathi;">கலைகள் அனைவரையும் சென்றடையக்கூடிய சிங்கப்பூரின் தேசிய  நிகழ்த்துகலை நிலையமாக எஸ்பிளனேட் - கடலோரக் கலை அரங்கம் திகழ்கிறது. ஆண்டு முழுவதும் எஸ்பிளனேட் முன்வைக்கும் கலை வடிவங்களின் மூலம் இளையர்களின் திறமைகளை வெளிப்படுத்தவும் கலைகள்பற்றிய  விழிப்புணர்வை எஸ்பிளனேட் - கடலோரக் கலை அரங்கம் அவர்களிடையே உருவாக்கும்.</p>
-<p style="font-size: 20px;font-family:Anjal InaiMathi;">இதன் வாயிலாகச் சிறுவர்களின் படைப்பாற்றலையும் கற்பனையாற்றலையும் வெளிப்படுத்தும் முயற்சியில் எஸ்பிளனேட் - கடலோரக் கலை அரங்கம் வாய்ப்புகளையும் இட வசதிகளையும் வழங்குகிறது.</p>
-<p style="font-size: 20px;font-family:Anjal InaiMathi;">எஸ்பிளனேட் இணையப்பக்கத்தில், குடும்பம் மற்றும் பள்ளிகள் பிரிவில் வழங்கப்பட்டுள்ள வளங்களைப் பயன்படுத்தி மாணவர்கள் பல்வேறு கலை வடிவங்கள்பற்றி அறிந்துகொள்ளலாம். இந்த வளங்கள் மொழியைக் கைவரப்பெற ஊக்குவிப்பதோடு பல்வேறு பண்பாட்டுக் கூறுகளைப்பற்றியும் மரபுகள் குறித்தும் அறிய உதவுகின்றன.</p>
+<p style="font-size: 20px;font-family: Anjal InaiMathi;text-align:justify;">கலைகள் அனைவரையும் சென்றடையக்கூடிய சிங்கப்பூரின் தேசிய  நிகழ்த்துகலை நிலையமாக எஸ்பிளனேட் - கடலோரக் கலை அரங்கம் திகழ்கிறது. ஆண்டு முழுவதும் எஸ்பிளனேட் முன்வைக்கும் கலை வடிவங்களின் மூலம் இளையர்களின் திறமைகளை வெளிப்படுத்தவும் கலைகள்பற்றிய  விழிப்புணர்வை எஸ்பிளனேட் - கடலோரக் கலை அரங்கம் அவர்களிடையே உருவாக்கும்.</p>
+<p style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">இதன் வாயிலாகச் சிறுவர்களின் படைப்பாற்றலையும் கற்பனையாற்றலையும் வெளிப்படுத்தும் முயற்சியில் எஸ்பிளனேட் - கடலோரக் கலை அரங்கம் வாய்ப்புகளையும் இட வசதிகளையும் வழங்குகிறது.</p>
+<p style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">எஸ்பிளனேட் இணையப்பக்கத்தில், குடும்பம் மற்றும் பள்ளிகள் பிரிவில் வழங்கப்பட்டுள்ள வளங்களைப் பயன்படுத்தி மாணவர்கள் பல்வேறு கலை வடிவங்கள்பற்றி அறிந்துகொள்ளலாம். இந்த வளங்கள் மொழியைக் கைவரப்பெற ஊக்குவிப்பதோடு பல்வேறு பண்பாட்டுக் கூறுகளைப்பற்றியும் மரபுகள் குறித்தும் அறிய உதவுகின்றன.</p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Esplanade - Theatres on the Bay</h4>
-<p style="font-size: 20px;font-family:Lato,sans-serif;">As Singapore’s national performing arts centre, Esplanade – Theatres on the Bay, believes in making the arts accessible to everyone.  </p>
-<p style="font-size: 20px;font-family:Lato,sans-serif;">Esplanade aims to increase awareness of the arts through exposing our young to the performing arts and educating   them in the different art forms that are presented at the centre all year round. This includes offering opportunities and space for young people to express their own creativity and imagination. </p>
-<p style="font-size: 20px;font-family:Lato,sans-serif;">Students can also learn more about the various art forms online through resources provided on the Family and Schools section on Esplanade Offstage. These resources also encourage language acquisition   through the discovery of different cultures and traditions.</p>
+<p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">As Singapore’s national performing arts centre, Esplanade – Theatres on the Bay, believes in making the arts accessible to everyone.  </p>
+<p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Esplanade aims to increase awareness of the arts through exposing our young to the performing arts and educating   them in the different art forms that are presented at the centre all year round. This includes offering opportunities and space for young people to express their own creativity and imagination. </p>
+<p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Students can also learn more about the various art forms online through resources provided on the Family and Schools section on Esplanade Offstage. These resources also encourage language acquisition   through the discovery of different cultures and traditions.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
