--- a/pages/தேசிய மரபுடைமைக் கழகம்.md
+++ b/pages/தேசிய மரபுடைமைக் கழகம்.md
@@ -32,11 +32,11 @@ description: ""
 }
 </style>
 <a href="/exhibits/tamil-exhibitions-e/community-partners/" style="float:left;" class="backbtn">Back</a><br>
-<h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;">தேசிய மரபுடைமைக் கழகம்</h4>
-<p style="font-size: 20px;font-family: Anjal InaiMathi;">தேசிய மரபுடைமைக் கழகத்துடன் இணைந்து மரபு வழியாகவும் பண்பாட்டு வழியாகவும் தாய்மொழிகளைக் கற்றுக்கொள்ளுங்கள். மொழி சார்ந்த நடவடிக்கைகள், குறிப்புகள், வளங்கள் ஆகியவற்றைக் குறித்துக் சீன மொழி பேசுவோம் இயக்கம், மலாய் மொழி இயக்கம், சிங்கப்பூர் வளர்தமிழ் இயக்கம் முதலியவற்றின் வாயிலாக மேலும் அறிந்துகொள்ளுங்கள். </p>
-<p style="font-size: 20px;font-family:Anjal InaiMathi;">சிங்கப்பூரின் மரபுடைமை நிலையங்களான இந்திய மரபுடைமை நிலையம், மலாய் மரபுடைமை நிலையம், சன் யாட் சென் நன்யாங் நினைவு மண்டபம் ஆகியவற்றைப்பற்றியும் விரிவாக அறிந்துகொள்ளலாம். இளையர்களுக்குக் கிடைக்கும் கற்றல் வாய்ப்புகள் குறித்தும் பெற்றோர்கள் கூடுதல் தகவல்களைத் தெரிந்துகொள்ளலாம். அதே வேளையில், வகுப்பறைக்கு அப்பால் கற்றலை விரிவுபடுத்துவதற்கான வழிவகைகளைப்பற்றிக் கல்வியாளர்களும் ஆசிரியர்களும் அறிந்துகொள்ளலாம்.</p>
+<h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;text-align:justify;">தேசிய மரபுடைமைக் கழகம்</h4>
+<p style="font-size: 20px;font-family: Anjal InaiMathi;text-align:justify;">தேசிய மரபுடைமைக் கழகத்துடன் இணைந்து மரபு வழியாகவும் பண்பாட்டு வழியாகவும் தாய்மொழிகளைக் கற்றுக்கொள்ளுங்கள். மொழி சார்ந்த நடவடிக்கைகள், குறிப்புகள், வளங்கள் ஆகியவற்றைக் குறித்துக் சீன மொழி பேசுவோம் இயக்கம், மலாய் மொழி இயக்கம், சிங்கப்பூர் வளர்தமிழ் இயக்கம் முதலியவற்றின் வாயிலாக மேலும் அறிந்துகொள்ளுங்கள். </p>
+<p style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">சிங்கப்பூரின் மரபுடைமை நிலையங்களான இந்திய மரபுடைமை நிலையம், மலாய் மரபுடைமை நிலையம், சன் யாட் சென் நன்யாங் நினைவு மண்டபம் ஆகியவற்றைப்பற்றியும் விரிவாக அறிந்துகொள்ளலாம். இளையர்களுக்குக் கிடைக்கும் கற்றல் வாய்ப்புகள் குறித்தும் பெற்றோர்கள் கூடுதல் தகவல்களைத் தெரிந்துகொள்ளலாம். அதே வேளையில், வகுப்பறைக்கு அப்பால் கற்றலை விரிவுபடுத்துவதற்கான வழிவகைகளைப்பற்றிக் கல்வியாளர்களும் ஆசிரியர்களும் அறிந்துகொள்ளலாம்.</p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Everyone is welcome to discover the heritage and culture of our Mother Tongue Languages with the National Heritage Board (NHB).
 Find out more about language programmes, tips and resources from the Speak Mandarin Campaign, Malay Language Council, Singapore and Tamil Language Council. </h4>
-<p style="font-size: 20px;font-family:Lato,sans-serif;">Learn more about the Heritage Institutions at the Indian Heritage Centre, Malay Heritage Centre and Sun Yat Sen Nanyang Memorial Hall.</p>
-<p style="font-size: 20px;font-family:Lato,sans-serif;">Parents can find out more about the learning opportunities available for the young, while educators can explore opportunities to expand learning beyond the classroom. </p>
+<p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Learn more about the Heritage Institutions at the Indian Heritage Centre, Malay Heritage Centre and Sun Yat Sen Nanyang Memorial Hall.</p>
+<p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Parents can find out more about the learning opportunities available for the young, while educators can explore opportunities to expand learning beyond the classroom. </p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
