Update file: விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்.md

--- a/pages/விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்.md
+++ b/pages/விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்.md
@@ -33,8 +33,8 @@ description: ""
 </style>
 <a href="/exhibits/tamil-exhibitions-e/community-partners/" style="float:left;" class="backbtn">Back</a><br>
 <h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;">விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்</h4>
-<p style="font-size: 20px;font-family: Anjal InaiMathi;">மண்டாய் வைல்டுலைஃப் குழு(Mandai Wildlife Group) விலங்குகளின் தேடலாய்வுகள் தாய்மொழிக் கற்றலை மேம்படுத்த எவ்வாறு வழிவகுக்கும்  என்பதைப்பற்றிப் பகிர்ந்துகொள்ள விரும்புகிறது. வியூஃபைண்டர்களைப் பயன்படுத்தி மின் அரங்கத்தில் இடம்பெற்றுள்ள மொழி விளையாட்டுகள், சுயவிடைக் கேள்விகள் போன்ற சுவாரஸ்யமான நடவடிக்கைகளில் ஈடுபடும்பொழுது தாய்மொழி கற்றல் மகிழ்வூட்டும் அனுபவமாகவும் அர்த்தமுள்ளதாகவும்  மிளிர்கிறது. </p>
-<p style="font-size: 20px;font-family:Anjal InaiMathi;">மேலும், இக்குழு மறுபயனீட்டுப் பொருள்களைப் பயன்படுத்திப் புத்தாக்கத்திறனோடு வியூஃபைண்டர்களைத் தயாரிக்கவும் ஊக்குவிக்கிறது. மறுசுழற்சிச் செய்யப்பட்ட பொருள்களால் உருவாக்கப்பட்ட வியூஃபைண்டர்கள் வனவிலங்குகளையும் அவற்றின் வாழ்விடங்களையும் எவ்வாறு பாதுகாக்கலாம் என்பதைப்பற்றிக் கலந்துபேசுவதற்கு ஓர் அரிய ஆக்ககரமான வாய்ப்பினை வழங்குகிறது. </p>
+<p style="font-size: 20px;font-family: Anjal InaiMathi;text-align:justify;">மண்டாய் வைல்டுலைஃப் குழு(Mandai Wildlife Group) விலங்குகளின் தேடலாய்வுகள் தாய்மொழிக் கற்றலை மேம்படுத்த எவ்வாறு வழிவகுக்கும்  என்பதைப்பற்றிப் பகிர்ந்துகொள்ள விரும்புகிறது. வியூஃபைண்டர்களைப் பயன்படுத்தி மின் அரங்கத்தில் இடம்பெற்றுள்ள மொழி விளையாட்டுகள், சுயவிடைக் கேள்விகள் போன்ற சுவாரஸ்யமான நடவடிக்கைகளில் ஈடுபடும்பொழுது தாய்மொழி கற்றல் மகிழ்வூட்டும் அனுபவமாகவும் அர்த்தமுள்ளதாகவும்  மிளிர்கிறது. </p>
+<p style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">மேலும், இக்குழு மறுபயனீட்டுப் பொருள்களைப் பயன்படுத்திப் புத்தாக்கத்திறனோடு வியூஃபைண்டர்களைத் தயாரிக்கவும் ஊக்குவிக்கிறது. மறுசுழற்சிச் செய்யப்பட்ட பொருள்களால் உருவாக்கப்பட்ட வியூஃபைண்டர்கள் வனவிலங்குகளையும் அவற்றின் வாழ்விடங்களையும் எவ்வாறு பாதுகாக்கலாம் என்பதைப்பற்றிக் கலந்துபேசுவதற்கு ஓர் அரிய ஆக்ககரமான வாய்ப்பினை வழங்குகிறது. </p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #9b4490;">Enter the Wonderful World of Animals</h4>
-<p style="font-size: 20px;font-family:Lato,sans-serif;">Mandai Wildlife Reserve would like to share how explorations of the wonderful world of animals can enhance the learning of Mother Tongue Languages. Schools and families are invited to explore the animal exhibits and online resources using viewfinders. Our viewfinders use word games and open-ended questions to combine language learning  and learning about the animal kingdom through interactive and meaningful activities. MWG also  provides a challenge for all viewers to create eco-friendly viewfinders. The creative process of making viewfinders out of discarded objects presents an authentic opportunity to talk about how we can protect wildlife and their habitats by reusing items we would otherwise just throw away.</p>
+<p style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Mandai Wildlife Reserve would like to share how explorations of the wonderful world of animals can enhance the learning of Mother Tongue Languages. Schools and families are invited to explore the animal exhibits and online resources using viewfinders. Our viewfinders use word games and open-ended questions to combine language learning  and learning about the animal kingdom through interactive and meaningful activities. MWG also  provides a challenge for all viewers to create eco-friendly viewfinders. The creative process of making viewfinders out of discarded objects presents an authentic opportunity to talk about how we can protect wildlife and their habitats by reusing items we would otherwise just throw away.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
