Update file: தமிழ் ஒளிக்காட்சிகள்.md

--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -38,9 +38,10 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">உடன்பாடான கல்வியோடு பாராட்டத்தக்க வினவல் அணுகுமுறையின் வாயிலாகத் தமிழ்மொழிக் கற்றல்<br/>
- <span style="font-family: Lato,Sans-Serif; font-size: 18px"> [Blended (Hybrid) Session from 11.30am to 12.30am]<br/><br/>
+ <span style="font-family: Lato,Sans-Serif; font-size: 18px"> [Blended (Hybrid) Session from 11.30am to 12.30pm]<br/><br/>
 Mdm Kunawathyammal D/O Kaliannan <br/>
-    Senior Teaching Fellow, NIE</span></td>
+   Senior Teaching Fellow, National Institute of Education
+</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Mrs-Kunawathy-Nallathambi" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
@@ -70,8 +71,7 @@ Mr Jaya Ganesh Isuran<br/>
   text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">கதை நேரம்<br/>
   <span style="font-family: Lato,Sans-Serif; font-size: 18px;">[Storytelling session (For K1 – P2 students)from 1.00pm to 2.00pm]<br/><br/>
    Ms Zainab <br/>
-		Associate Librarian, Tamil Language
-		National Library Board  </span></td>
+		Associate Librarian, Tamil Language, National Library Board </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Zainab" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -86,7 +86,8 @@ Mr Jaya Ganesh Isuran<br/>
   text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">பாலர் பள்ளிப் பிள்ளைகளைப் பயன்முனைப்புமிக்க வகையில் தமிழ்மொழியில் ஈடுபடச் செய்தல்.<br/>
  <span style="font-family: Lato,Sans-Serif; font-size: 18px;"> [Virtual Workshop (For Parent-Child) from 2.30pm to 3.30pm]<br/><br/>
 Ms Yogeswari Preshant <br/>
-	 Founder, Think Tamil Academy Artistic Director, ThinkTheatre </span></td>
+	Founder, Think Tamil Academy, Artistic Director, ThinkTheatre
+ </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Yogeswari-Preshant" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
@@ -149,7 +150,7 @@ Ms Rani Kanna <br/>
   text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">Sபாலர் பள்ளி மாணவர்களை மகிழ்வூட்டும் தமிழ்மொழி கற்றலில் ஈடுபடுத்த ஆசிரியர்களும் பெற்றோர்களும் மேற்கொள்ளக்கூடிய சில உத்திமுறைகள் <br/>
  <span style="font-family: Lato,Sans-Serif; font-size: 18px;"> (Available online from 27 Aug 22) <br/><br/>
 Dr Sukuna S. Vijayadevar, PhD <br/>
-	 Lead Curriculum Specialist, NIEC HQ </span></td>
+	 Lead Curriculum Specialist, NIEC-HQ</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Dr-Sukuna-S-Vijayadevar" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
