--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -49,7 +49,7 @@ text-decoration:none;
 </style>
 </head>
 <body>
-	<h4 style="font-family:Lato,sans-serif;"><b>For Preschool/Primary Educators </b></h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>For Pre-School/Primary Educators</b></h4>
   <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
