Update file: தமிழ் ஒளிக்காட்சிகள்.md

--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -5,7 +5,20 @@ description: ""
 ---
 <html>
 <head>
-<style>
+<style>.btntop {
+    position: fixed;
+    float: right;
+    bottom: 20px;
+    right: 80px;
+    z-index: 99;
+    boder: none;
+    background-color: #3bb9ff;
+    cursor: pointer;
+    padding: 15px;
+    boder-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
 	.btn1{
 	font-size: 16px;
     font-family: Lato,sans-serif;
@@ -32,21 +45,6 @@ text-decoration:none;
 </style>
 </head>
 <body>
-	<h4 style="font-family:Lato,sans-serif;"><b>For Pre-School/Primary Educators</b></h4>
-  <table style="border-collapse: collapse;
-  width: 100%;">
-  <tr>
-    <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">உடன்பாடான கல்வியோடு பாராட்டத்தக்க வினவல் அணுகுமுறையின் வாயிலாகத் தமிழ்மொழிக் கற்றல்<br/>
- <span style="font-family: Lato,Sans-Serif; font-size: 18px"> [Blended (Hybrid) Session from 11.30am to 12.30pm]<br/><br/>
-Mdm Kunawathyammal D/O Kaliannan <br/>
-   Senior Teaching Fellow, National Institute of Education
-</span></td>
-    <td style="border: none;
-  text-align: left;padding: 8px;width: 30%;">
- <a href="/Mrs-Kunawathy-Nallathambi" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
-    </tr>
-</table>
 	<h4 style="font-family:Lato,sans-serif;"><b>Sharing Sessions</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
@@ -179,5 +177,19 @@ Horizon Primary School <br/>
  <a href="/Mdm-Sumathi-Krishnasamy-And-Mdm-Thasneem-Parveen" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
 </td>
     </tr></table>
-</body>
-</html>
+<h4 style="font-family:Lato,sans-serif;"><b>For Pre-School/Primary Educators</b></h4>
+  <table style="border-collapse: collapse;
+  width: 100%;">
+  <tr>
+    <td style="border: none; width: 70%;
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">உடன்பாடான கல்வியோடு பாராட்டத்தக்க வினவல் அணுகுமுறையின் வாயிலாகத் தமிழ்மொழிக் கற்றல்<br/>
+ <span style="font-family: Lato,Sans-Serif; font-size: 18px"> [Blended (Hybrid) Session from 11.30am to 12.30pm]<br/><br/>
+Mdm Kunawathyammal D/O Kaliannan <br/>
+   Senior Teaching Fellow, National Institute of Education
+</span></td>
+    <td style="border: none;
+  text-align: left;padding: 8px;width: 30%;">
+ <a href="/Mrs-Kunawathy-Nallathambi" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
+    </tr>
+</table>
+	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
